Closed Bug 328344 Opened 19 years ago Closed 19 years ago

action module elements leak

Categories

(Core Graveyard :: XForms, defect)

defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: smaug, Assigned: smaug)

References

Details

(Keywords: fixed1.8.0.4, fixed1.8.1)

Attachments

(1 file)

Currently action module elements use strong refs to DOM elements. That is wrong. Should be weak ref. Patch coming
Attached patch proposed patchSplinter Review
Attachment #212931 - Flags: review?(aaronr)
Attachment #212931 - Flags: review?(doronr)
Attachment #212931 - Flags: review?(doronr) → review+
Attachment #212931 - Flags: review?(aaronr) → review+
Checked in to trunk Checking in nsXFormsActionElement.cpp; /cvsroot/mozilla/extensions/xforms/nsXFormsActionElement.cpp,v <-- nsXFormsActionElement.cpp new revision: 1.5; previous revision: 1.4 done Checking in nsXFormsActionElement.h; /cvsroot/mozilla/extensions/xforms/nsXFormsActionElement.h,v <-- nsXFormsActionElement.h new revision: 1.3; previous revision: 1.2 done Checking in nsXFormsActionModuleBase.cpp; /cvsroot/mozilla/extensions/xforms/nsXFormsActionModuleBase.cpp,v <-- nsXFormsActionModuleBase.cpp new revision: 1.3; previous revision: 1.2 done Checking in nsXFormsActionModuleBase.h; /cvsroot/mozilla/extensions/xforms/nsXFormsActionModuleBase.h,v <-- nsXFormsActionModuleBase.h new revision: 1.2; previous revision: 1.1 done
Status: NEW → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
Whiteboard: xf-to-branch
Status: RESOLVED → REOPENED
Resolution: FIXED → ---
Blocks: 326556
Status: REOPENED → RESOLVED
Closed: 19 years ago19 years ago
Resolution: --- → FIXED
Blocks: 332853
Whiteboard: xf-to-branch
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: