Bug 328344, action module elements leak, r=aaronr+doronr